# Royal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: PROJECT_HISTORY.md  desktop-app.md
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AssumptionsPanel.jsx  BrutalSummary.jsx  CoachingMessage.jsx  DecisionNextStep.jsx  DecisionProgress.jsx  Footer.jsx  ForgottenCosts.jsx  FormField.jsx  InfoCard.jsx  PageHero.jsx  ResultPanel.jsx  SectionHeader.jsx  ShareActions.jsx  SiteLayout.jsx  TextareaField.jsx  ToggleField.jsx  TopBanner.jsx
src/data/: cruiseCostConfig.js  packingData.js  releaseInfo.js  royalShipDiningProfiles.js  royalShips.js  siteContent.js
src/pages/: AboutPage.jsx  ChangelogPage.jsx  ComparePage.jsx  CruiseCostPage.jsx  DealEvaluatorPage.jsx  DiningPackagePage.jsx  DiningPage.jsx  DrinkPackagePage.jsx  GuidedModePage.jsx  HomePage.jsx  PackingPage.jsx  PlannerPage.jsx  ShouldIBookPage.jsx  TheKeyPage.jsx  ToolsPage.jsx  TripBriefPage.jsx  TripSnapshotPage.jsx  WifiCalculatorPage.jsx
src/utils/: calculators.js  compareShare.js  diningStrategy.js  formatters.js  share.js  shareSummaries.js  storage.js  tripSnapshot.js
