[package]
name = "cruise-decision-engine"
version = "2.6.0"
description = "Native Windows shell for the Cruise Decision Engine."
authors = ["Cruise Decision Engine"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "cruise_decision_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
